@@ -1,1 +1,10 @@
-EXTRA_DIST = sco_init.c sco_io.c sco_iop.c sco_mouse.c sco_video.c VTsw_sco.c
+EXTRA_DIST = \
+	VTsw_sco.c \
+	sco_KbdMap.c \
+	sco_init.c \
+	sco_io.c \
+	sco_iop.c \
+	sco_kbd.c \
+	sco_kbd.h \
+	sco_mouse.c \
+	sco_video.c
