@@ -1,0 +1,12 @@
+EXTRA_DIST = \
+	usl_init.c \
+	usl_io.c \
+	usl_iop.c \
+	usl_kbd.c \
+	usl_kbd.h \
+	usl_KbdMap.c \
+	usl_mouse.c \
+	usl_video.c \
+	usl_vtsw.c \
+	usl_xqueue.c \
+	usl_xqueue.h
